# rodiger.io

./: .gitignore  .vercelignore  Cargo.toml  README.md  rust-toolchain.toml  vercel.json
.github/workflows/: auto-redeploy.yml
api/: common.rs  dune.js  index.rs  llama.js  page.rs  redeploy.js  redeploy.ts  static.rs  trades.js
config/: hyperliquid-live-strategy.json  hyperliquid-research-lanes.json
lib/: hyperliquid-research-lanes.js  hyperliquid-strategy.js
pages/fun/: index.html
pages/paxos/: index.html
pages/trades/: index.html
pages/usdg/: index.html
scripts/: build-vercel.sh  check-paxos-dashboard.mjs  check-trades-dashboard.mjs  fetch-dune.js
src/: common.rs
static/css/: style.css
static/data/: dune.json
templates/: page.html
web/templates/: page.html
