[package]
name = "rodiger-vercel"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yup-oauth2 = { version = "8", default-features = false, features = ["service_account"] }
pulldown-cmark = "0.10"
regex = "1"
lazy_static = "1"
chrono = { version = "0.4", features = ["clock"] }
include_dir = "0.7"
base64 = "0.22"

[lib]
name = "rodiger_vercel"
path = "src/lib.rs"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "page"
path = "api/page.rs"

[[bin]]
name = "static"
path = "api/static.rs"
