[package]
name = "rodiger-vercel"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yup-oauth2 = { version = "8", default-features = false, features = ["service_account"] }
pulldown-cmark = "0.10"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["clock"] }
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10"

[lib]
name = "rodiger_vercel"
path = "src/lib.rs"

[[bin]]
name = "sitegen"
path = "src/bin/sitegen.rs"
